[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
# dependencies: cmake.version_min
cmake.version = ">=3.26.1"
cmake.build-type = "Release"
ninja.version = ">=1.11"
ninja.make-fallback = false
sdist.exclude = [
  ".github",
  ".clang-format",
  ".clang-tidy",
  ".codechecker",
  ".gitattributes",
  ".gitignore",
  ".gitmodules",
  ".jupytext.toml",
  ".pre-commit-config.yaml",
  "scripts",
]
build-dir = "build/{wheel_tag}"
build.targets = ["pyneml2", "tools"]
wheel.install-dir = "neml2"

[tool.scikit-build.cmake.define]
NEML2_WHEEL = "ON"
NEML2_TESTS = "OFF"
NEML2_TOOLS = "ON"
NEML2_WORK_DISPATCHER = "OFF"
NEML2_JSON = "ON"
NEML2_CSV = "ON"

[project]
name = "neml2"
# dependencies: neml2.version
version = "2.1.5"
authors = [
  { name = "Mark Messner", email = "messner@anl.gov" },
  { name = "Gary Hu", email = "thu@anl.gov" },
]
description = "GPU-enabled vectorized material modeling library"
readme = "README.md"
# dependencies: python.version_min
requires-python = ">=3.10"
dependencies = [
  # Lower bound is a hard pin (older torch has known-incompatible ABI). The
  # upper bound is intentionally left open: newer torch may or may not work,
  # so we let the user opt in rather than block the install. See
  # doc/content/installation/compatibility.md for the regression-tested set.
  # dependencies: torch.version_min
  "torch>=2.10.0",
  # dependencies: pyzag.version
  "pyzag==1.1.1",
  # dependencies: nmhit.version_min
  "nmhit>=0.1.2",
]

[project.optional-dependencies]
dev = [
  # testing
  "pytest",
  "pytest-xdist",
  "nbmake",
  # doc
  # dependencies: pybind11_stubgen.version_min
  "pybind11-stubgen>=2.5.5",
  # lint + format
  # dependencies: ruff.version
  "ruff==0.15.13",
  # typecheck
  # dependencies: pyright.version
  "pyright==1.1.409",
  "PyYAML",
  "matplotlib",
  "numpy",
  "scipy",
  "pandas",
  "loguru",
  "pyro-ppl",
  "tqdm",
  "nbconvert",
  "nbformat",
  "livereload",
  # git
  "pre-commit",
]

[project.scripts]
neml2-diagnose = "neml2._cli:diagnose"
neml2-inspect = "neml2._cli:inspect"
neml2-run = "neml2._cli:run"
neml2-syntax = "neml2._cli:syntax"
neml2-time = "neml2._cli:time"
neml2-stub = "neml2._cli:stub"

[tool.uv]
no-build-isolation-package = ["neml2"]

[tool.ruff]
line-length = 100
# Tracks `requires-python` above; format is ruff's "pyXY" rather than "X.Y", so
# scripts/dep_manager.py cannot tie this automatically — bump by hand when the
# minimum Python bumps.
target-version = "py310"
extend-exclude = ["contrib", "build", "installed", "python/examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Re-export shims: __init__.py files routinely import names for the sole
# purpose of exposing them on the package surface, and `from .x import *`
# is the only practical pattern when the source is a compiled pybind11
# submodule with ~100 public names.
"**/__init__.py" = ["F401", "F403", "F405"]
# Pedagogical scripts; short ambiguous names and the occasional unused loop
# index are part of how the tutorials read.
"doc/content/tutorials/**/*.py" = ["E741", "B007"]

[tool.pyright]
# Default scope is everything outside the package itself, so contributors can
# run pyright without first building a neml2 wheel. The CI `typecheck` job
# additionally targets `python/` after installing the wheel + generating
# stubs (see .github/workflows/python.yml).
include = [
  "scripts",
  "doc/scripts",
  "benchmark",
  "tests",
  "doc/content/tutorials",
]
exclude = [
  # pyright's built-in defaults (specifying `exclude` replaces them, so they
  # must be repeated here to keep .git/, __pycache__/, dotfiles, etc. ignored)
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  # project-specific
  "contrib",
  "build",
  "installed",
  "python/examples",
]
# dependencies: python.version_min
pythonVersion = "3.10"
# torch's own stubs don't re-export common symbols (`tensor`, `device`,
# `float64`, ...) via __all__, so `from torch import X` floods this rule
# with false positives. Qualified `torch.X` access still works as expected.
reportPrivateImportUsage = "none"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*win* *manylinux_i686 *manylinux_aarch64 *manylinux_ppc64le *manylinux_s390x *manylinux_armv7l *musllinux*"

environment = { CMAKE_GENERATOR = "Ninja" }
build-verbosity = 1
build-frontend = { name = "build", args = ["--no-isolation"] }

before-all = ""
# dependencies: pybind11_stubgen.version_min
before-build = "python -m pip install scikit-build-core ninja torch pybind11-stubgen>=2.5.5 wheel"

# dependencies: pyzag.version
test-requires = "pytest torch pyzag==1.1.1"
test-command = "pytest -v {project}/python/tests"

[tool.cibuildwheel.linux]
repair-wheel-command = "python {project}/scripts/repair_wheel.py {wheel} {dest_dir}"

[tool.cibuildwheel.macos]
repair-wheel-command = "python {project}/scripts/repair_wheel.py {wheel} {dest_dir}"
